--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ repositories {
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.21'
+    compile 'com.mashape.unirest:unirest-java:1.4.9'
+    compile 'com.google.guava:guava:20.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.5'
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
